fixed the styling, added my link to linkedin, made the entire page render on all pages, fixed the dropdown links, cleaned up the routing, next up, make the dropdown menu work on mobile

--- a/src/components/UserProfile/index.css
+++ b/src/components/UserProfile/index.css
@@ -9,6 +9,7 @@
     justify-content: center;
   }
 
+  
 .size {
   width: 50%;
   display: "flex";
@@ -17,21 +18,24 @@
   margin-bottom: 30px;
   }
 
-  .bioCont {
-    margin-bottom: 165px;
-  }
 
 .bottomMargin {
   margin-bottom: 30px;
 }
 
+/* event cards styling */
 .cardCenter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
- 
+  display: "flex";
+  justify-content: "center";
+align-items: center;
+flex-basis: auto;
+
 }
 
+.eventCard {
+  
+  border: 2px blue solid;
+}
 
 
 
